...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/upload_post_back"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/back"
            app:tint="@color/white" />
...
                        android:singleLine="false"
                        android:textSize="15dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@drawable/rectangular_gray_background"
                android:clickable="true"
                android:focusable="true"
...
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/baseline_arrow_forward" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setVisibility"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@drawable/rectangular_gray_background"
                android:clickable="true"
                android:gravity="center_vertical"
...
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/baseline_arrow_forward" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@drawable/rectangular_gray_background"
                android:clickable="true"
                android:gravity="center_vertical"
...

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upload_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:text="Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/addPhotoButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_gray_background"
        android:clickable="true"
...
