<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PostActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/topBarHeight"
            android:background="@color/tomatoRed"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/post_back"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/back"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/post_activity_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="Your Post"
                android:textColor="@color/white"
                android:textSize="@dimen/topBarFontSize"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/postViewPager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:clipChildren="true"
            android:clipToOutline="true"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.BottomRounded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/post_activity_postLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Location Name"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_activity_postDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Posted at ..."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_activity_postLocation" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_activity_postDate">

            <androidx.cardview.widget.CardView
                android:id="@+id/post_activity_dark_card"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                app:cardBackgroundColor="@color/tomatoShadow"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/post_activity_postNoteFake"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/post_activity_light_card"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:cardBackgroundColor="@color/lightTomatoRed2"
                app:cardCornerRadius="20dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"
                            app:srcCompat="@drawable/note" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="44dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Notes"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/post_activity_postNote"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <Button
            android:id="@+id/post_activity_send_message_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="164dp"
            android:backgroundTint="@color/darkTomatoRed"
            android:text="Send Message"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

        <LinearLayout
            android:id="@+id/delete_post_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_rectangular_red"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/delete_button"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Delete"
                android:textColor="@color/white"
                android:textSize="@dimen/normalFontSize"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>