...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Private"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Public"
                android:textSize="20dp"/>

        </RadioGroup>
...
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/submitPostVisibility"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="Proceed" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
